<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/background_color"
    android:elevation="2dp"
    android:background="@drawable/bg_rounded_rounded"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".remote.authentication.signup.view.SignUpFragment">



    <EditText
        android:id="@+id/txtUserNameSignUp"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="5dp"
        android:background="@drawable/bg_rounded_rounded"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"
        android:padding="10sp"
        android:singleLine="true"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/txtPasswordSignUp"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_lock"
        android:background="@drawable/bg_rounded_rounded"
        android:hint="@string/hintPassword"
        android:inputType="textVisiblePassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="@+id/txtUserNameSignUp"
        app:layout_constraintStart_toStartOf="@+id/txtUserNameSignUp"
        app:layout_constraintTop_toBottomOf="@+id/txtUserNameSignUp" />
    <!--android:inputType="textVisiblePassword" -->

    <EditText
        android:id="@+id/txtConfirmPasswordSignUp"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_lock"
        android:background="@drawable/bg_rounded_rounded"
        android:hint="@string/confirm_password"
        android:inputType="textVisiblePassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="@+id/txtUserNameSignUp"
        app:layout_constraintStart_toStartOf="@+id/txtUserNameSignUp"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordSignUp" />
    <!--android:inputType="textVisiblePassword" -->

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_rounded_rounded"
        android:backgroundTint="@color/primary_color"
        android:text="@string/btnSignUp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnHaveAccount"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/signUpProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/btnSignUp"
        app:layout_constraintEnd_toEndOf="@+id/btnSignUp"
        app:layout_constraintStart_toStartOf="@+id/btnSignUp"
        app:layout_constraintTop_toTopOf="@+id/btnSignUp"
        android:visibility="invisible"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="20dp" />

    <TextView
        android:id="@+id/txtSkipSigUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:text="@string/skip"
        android:textSize="20sp"
        android:textColor="@color/primary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="60dp"
        android:text="@string/create_new_account"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/welcome_friend_sign_up"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnSignUpToGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/icon_google"
        android:text="@string/sign_up_with_google"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btnHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/sign_in"
        android:textColor="@color/primary_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>