<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/bg_rounded_rounded"
    android:backgroundTint="@color/background_color"
    tools:context=".search.view.SearchFragment">

    <EditText
        android:id="@+id/txtSearch"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/bg_rounded_rounded"
        android:drawableStart="@drawable/ic_search"
        android:hint="@string/search"
        android:inputType="textVisiblePassword"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupSearch"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        app:checkedChip="@id/Category"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/txtSearch"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/Category"
            android:checkable="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/category" />

        <com.google.android.material.chip.Chip
            android:id="@+id/Ingredient"
            android:checkable="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ingredient" />

        <com.google.android.material.chip.Chip
            android:id="@+id/Country"
            android:checkable="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/country" />
    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/chipGroupSearch"
        tools:listitem="@layout/item_list_home" />

</androidx.constraintlayout.widget.ConstraintLayout>